fixed empty response http status code
