# internal/http/docs/swagger.json
@@ -327,12 +327,12 @@
                         "required": true
                     },
                     {
-                        "description": "Snippet data",
-                        "name": "snippet",
+                        "description": "Snippet IsPublic data",
+                        "name": "snippet_is_public",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdateSnippetRequestModel"
+                            "$ref": "#/definitions/models.BooleanRequestModel"
                         }
                     }
                 ],
@@ -375,7 +375,7 @@
                     {
                         "type": "string",
                         "description": "Snippet ID",
-                        "name": "id",
+                        "name": "userId",
                         "in": "path",
                         "required": true
                     }
@@ -407,6 +407,15 @@
         }
     },
     "definitions": {
+        "models.BooleanRequestModel": {
+            "type": "object",
+            "properties": {
+                "bool": {
+                    "type": "boolean",
+                    "example": true
+                }
+            }
+        },
         "models.CreateSnippetRequestModel": {
             "type": "object",
             "properties": {
@@ -534,6 +543,9 @@
                     "type": "string"
                 },
                 "is_deleted": {
+                    "type": "boolean"
+                },
+                "is_public": {
                     "type": "boolean"
                 },
                 "modified_date": {
